# wasm-worker

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
src/: lib.rs  main.ts  worker.js
