[package]
name = "wasm-worker"
version = "0.1.0"
edition = "2021"
description = "A simple example of using a Wasm module in a browser worker"
repository = "https://github.com/yourusername/wasm-worker"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3